--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,26 +2,38 @@ version: '3.3'
 
 services:
     # Development related
+    db:
+        build:
+            context: .
+            dockerfile: ./docker/db/Dockerfile
+            args:
+                # These values should be in sync with environment
+                # for development. If you change them, you'll 
+                # need to rebuild the container
+                - POSTGRES_DB=locations
+                - POSTGRES_USER=postgres
+                - POSTGRES_PASSWORD=somepassword
+                - POSTGRES_PORT=5432
+
     test:
+        env_file: environment.env
         build: 
             context: .
         entrypoint: pytest
+        depends_on:
+            - db
         volumes:
             - ./src:/opt/code
             - ./tests:/opt/code/
 
     # Producion related
     server:
+        env_file: environment.env
         image: locations_server
         build: 
             context: .
         command: /opt/server/start_server.sh
         ports:
             - "8080:80"
-        deploy:
-          endpoint_mode: dnsrr
-          resources:
-            limits:
-              memory: 16M
-            reservations:
-              memory: 16M
+        depends_on:
+            - db
