Add the first mocked call to get Products
Some restructuring along the way

--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -51,13 +51,11 @@ ENV PGDATA /opt/data
 WORKDIR /opt/code
 
 RUN mkdir -p /opt/code/db
-WORKDIR /opt/code/db
 # Add postgres setup
 ADD ./docker/db/postgres-setup.sh /opt/code/db/
-RUN ./postgres-setup.sh
+RUN  /opt/code/db/postgres-setup.sh
 
 # Install our code to prepare the DB
-WORKDIR /opt/code
 ADD requirements.txt /opt/code
 
 RUN pip3 install -r requirements.txt
